--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ jobs:
         run: docker build -t $IMAGE .
 
       - name: Trivy vulnerability scan
-        uses: aquasecurity/trivy-action@v0.13.1
+        uses: aquasecurity/trivy-action@0.13.1
         with:
           image-ref: ${{ env.IMAGE }}
           format: table
