--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,5 @@
 name: CI-CD
+
 on:
   push:
     branches: [ main ]
@@ -9,57 +10,44 @@ env:
   IMAGE: ghcr.io/${{ github.repository }}:${{ github.sha }}
 
 jobs:
+name: CI-CD
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+  schedule:
+    - cron: '0 3 * * *'   # nightly security run
+
+jobs:
   build-test-scan:
     runs-on: ubuntu-latest
+    env:
+      SHA: ${{ github.sha }}
     steps:
       - uses: actions/checkout@v4
 
-      - uses: actions/setup-python@v5
-        with: { python-version: '3.11' }
-
-      - name: Install deps
+      - name: Set IMAGE variable
         run: |
-          python -m pip install --upgrade pip
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          echo "IMAGE=ghcr.io/$(echo '${{ github.repository }}' | tr '[:upper:]' '[:lower:]'):${SHA}" >> $GITHUB_ENV
 
-      - name: Unit tests
-        run: pytest -q || true            # replace with real tests later
+      - name: Build image
+        run: docker build -t "$IMAGE" .
 
-      - name: Bandit static-analysis
-        run: pip install bandit && bandit -r app || true
-
-      - name: Build Docker image
-        run: docker build -t $IMAGE .
-
-      - name: Trivy vulnerability scan
-        uses: aquasecurity/trivy-action@0.13.1
+      - name: Trivy scan
+        uses: aquasecurity/trivy-action@v0.19.0
         with:
           image-ref: ${{ env.IMAGE }}
           format: table
 
-      - name: Login to GHCR
-        if: github.ref == 'refs/heads/main'
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Push image
         if: github.ref == 'refs/heads/main'
-        run: docker push $IMAGE
+        run: docker push "$IMAGE"
 
   deploy:
     needs: build-test-scan
-    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
     steps:
-      - name: Argo CD sync
-        env:
-          ARGOCD_AUTH_TOKEN: ${{ secrets.ARGOCD_TOKEN }}
-        run: |
-          argocd app set app-template \
-            --repo ${{ github.repositoryUrl }} \
-            --revision ${{ github.sha }} \
-            --parameter image.tag=${{ github.sha }}
-          argocd app sync app-template
+      - name: Stub deploy
+        run: echo "Simulated deploy OK"
